--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+<!--------->
 
+<!-----------Navigation-->
+    <header>  
+        <nav>
+
+        <ul>
+            <li>            <img src="images/logo.png"></li>
+            <li>Adventures</li>
+            <li>Crew</li>
+            <li>About Us</li>
+        </ul>
+    </nav>      
+    </header>
+<!------------------------>
+
+
+    <body>
+
+    </body>
+
+</html>
